# dali

./: .gitignore  .gitmodules  .plan  .plans  CMakeLists.txt  Makefile  common.h  create.sh  diff.txt  g_api.h  g_chalkboard.c  g_houdini.c  g_houdini_api.h  g_standalone.c  game.c  game.h  layer.c  layer.h  log.txt  main.c  obsidian  paint.c  paint.h  painter-bin  painter.c  painter.h  plan  render.c  render.h  save.sh  tp  ubo-shared.h  undo.c  undo.h
cmake/: CMakeLists.txt  DaliConfig.cmake.in  PainterConfig.cmake.in
data/: cube-cw.tnt  cube.tnt  flip-uv.tnt  grid.tnt  pig.tnt  pighead.tnt
shaders/: applyPaint.frag  common.glsl  comp.frag  comp2.frag  comp2a.frag  comp3a.frag  comp4a.frag  layerStack.frag  paint-vec2.rchit  paint.rchit  paint.rgen  paint.rmiss  post.frag  post.vert  raster.frag  raster.vert  raycommon.glsl  select-float.rchit  select.rchit  select.rgen  select.rmiss
src/: CMakeLists.txt  common.h  dtags.h  g_chalkboard.c  g_houdini.c  g_standalone.c  main.c  paint.c  painter.c  painter.h  render.c  render.h  undo.c
src/examples/: CMakeLists.txt  hello-triangle.c  hello-ui.c  painter-bin.c
src/examples/shaders/: CMakeLists.txt  simple.frag  simple.vert
src/include/dali/: brush.h  dali.h  engine.h  layer.h  undo.h
src/lib/: CMakeLists.txt  brush.c  brush.h  common.h  dali.c  dali.h  engine.c  engine.h  g_chalkboard.c  layer.c  layer.h  paint.c  paint.h  painter-old.h  painter.c  private.h  render-old.c  render-old.h  render.h  ubo-shared.h  undo.c  undo.h
src/lib/shaders/: applyPaint.frag  brush.glsl  comp2a.frag  paint-vec2.rchit  select.rgen
src/modules/: g_standalone.c
src/shaders/: CMakeLists.txt  common.glsl  comp.frag  fireray.glsl  paint-image-r8g8b8a8.rgen  paint.rchit  paint.rgen  paint.rmiss  paint32R.rgen  raycommon.glsl  selcommon.glsl
